testsuite/bsc.names/portRenaming/invalidAttrs/always_ready/WrongLoc_InterfaceWithArg.bsv

(* always_ready = "start" *)
interface Ifc;
  method Action start(Bool a, Bool b);
endinterface

